--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/openai": "^1.1.9",
     "@ai-sdk/react": "^1.1.11",
     "ai": "^4.1.34",
+    "cloudinary": "^2.5.1",
     "next": "15.1.7",
     "raw-loader": "^4.0.2",
     "react": "^19.0.0",
